bins/havenc/tests/cases/fail/test_generic_struct_const_badsize.hv
//@ error: unknown const parameter 'M'
// A field size must name one of the struct's declared const params.

struct Buf<T, const N: u32> { data: [T; M] }

@export
proc main() i32 { return 0; }
